Fixed date alignment in Education

--- a/src/styles/CVPreview.css
+++ b/src/styles/CVPreview.css
@@ -45,7 +45,7 @@ ul {
 }
 
 .experienceHeader,
-.educationeHeader {
+.educationHeader {
     display: flex;
     justify-content: space-between;
     align-items:flex-start;
